Fixing layout issue in greeting

--- a/src/components/socialMedia/SocialMedia.css
+++ b/src/components/socialMedia/SocialMedia.css
@@ -5,9 +5,6 @@
 .icon-button i {
   color: #fff;
 }
-/* .icon-button {
-  margin-bottom: 10px;
-} */
 
 .icon-button i {
   width: 2.6rem;
