--- a/src/containers/greeting/Greeting.css
+++ b/src/containers/greeting/Greeting.css
@@ -4,29 +4,18 @@
   margin: auto;
 }
 
-/* .gretting-main {
-  width: 90%;
-  padding: 20px 10px;
-  margin: 0px auto;
-} */
-
-/* .greeting-main {
+.greeting-main {
   margin-top: 40px;
   display: flex;
   flex-direction: row;
-} */
+}
 
-/* .greeting-main > * {
+.greeting-main > * {
   flex: 1;
   margin-bottom: 30px;
   display: flex;
   flex-direction: column;
-} */
-
-/* .button-greeting-div {
-  display: flex;
-  margin-top: 20px;
-} */
+}
 
 .greeting-text {
   margin-top: 40px;
@@ -70,10 +59,6 @@
 }
 
 @media (max-width: 768px) {
-  .button-greeting-div {
-    justify-content: space-around;
-  }
-
   .greeting-text {
     font-size: 30px;
     margin-top: 0px;
